crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__image_handling__tests__image_handling_single_image.snap
---
source: crates/forge_domain/src/transformer/image_handling.rs
expression: snapshot
---
transformation: ImageHandling
before:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User message
    - id: "[id]"
      tool:
        name: image_tool_1
        call_id: call_1
        output:
          is_error: false
          values:
            - image:
                url: "data:image/png;base64,image1_data"
                mime_type: image/png
    - id: "[id]"
      tool:
        name: image_tool_2
        call_id: call_2
        output:
          is_error: false
          values:
            - image:
                url: "data:image/jpeg;base64,image2_data"
                mime_type: image/jpeg
after:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User message
    - id: "[id]"
      tool:
        name: image_tool_1
        call_id: call_1
        output:
          is_error: false
          values:
            - text: "[The image with ID 0 will be sent as an attachment in the next message]"
    - id: "[id]"
      tool:
        name: image_tool_2
        call_id: call_2
        output:
          is_error: false
          values:
            - text: "[The image with ID 1 will be sent as an attachment in the next message]"
    - id: "[id]"
      text:
        role: User
        content: "[Here is the image attachment for ID 0]"
    - id: "[id]"
      image:
        url: "data:image/png;base64,image1_data"
        mime_type: image/png
    - id: "[id]"
      text:
        role: User
        content: "[Here is the image attachment for ID 1]"
    - id: "[id]"
      image:
        url: "data:image/jpeg;base64,image2_data"
        mime_type: image/jpeg
